2013-02-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: erased lost develop traces.

2013-02-25  Sancho Lerena <slerena@artica.es>

	* PandoraFMS/Config.pm: Fixed parsing of mta_from, avoiding problems
	on blank spaces.

2013-02-25  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Delay the backgrounding of the main process to
	  make log messages available when starting from the init script.

2013-02-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: erased the spam traces (useful for the
	developers but not for to users) in the code for the Planned
	Downtimes.

2013-02-22  Sancho Lerena <slerena@artica.es>

	*  lib/PandoraFMS/Tools.pm: My MacOS boxes was being ignored
	due lack of "darwin" detection here :(

2013-02-20  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed problem with SNMP alerts: they
	defined custom fields on it's own version of the alert template,
	and actions was overwriting it's information, so in the case
	of snmp alerts, template information has more priority than action.

2013-02-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_xml_stress.pl: fixed the output the string module
	data in the XML.

2013-02-18  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	lib/PandoraFMS/DataServer.pm: Fixed the exception of "status"
	field of the XML deleted from the supported tags in a previous
	fix for bug 3604850

2013-02-18  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Clean the blank spaces
	from the start and end of the return of the plugin to make
	easier the configuration of numeric modules and not confuse
	with snapshot mode

2013-02-15  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	lib/PandoraFMS/ReconServer.pm
	util/pandora_manage.pl: Encapsulate the code of create
	a module from a network component. Unify calls of CLI
	and Recon Server to dont break module counts
