@@ -259,14 +259,18 @@ $SIG{'ALRM'} = 'IGNORE';
 pandora_init(\%Config, 'Pandora FMS Server');
 pandora_load_config (\%Config);
 
+# Daemonize and put in background
+if ($Config{'daemon'} == 1) {
+	print_message (\%Config, " [*] Backgrounding Pandora FMS Server process.\n", 1);
+	pandora_daemonize (\%Config);
+}
+
 # Load enterprise module
 if (enterprise_load (\%Config) == 0) {
 	print_message (\%Config, " [*] Pandora FMS Enterprise module not available.", 1);
 } else {
 	print_message (\%Config, " [*] Pandora FMS Enterprise module loaded.", 1);
-}
 
-if (enterprise_load (\%Config) != 0) {
 	if($Config{'policy_manager'} == 1) {
 		# Start thread to patrol policy queue
 		my $thr_policy_queue = threads->create('pandora_process_policy_queue', (\%Config));
@@ -284,12 +288,6 @@ pandora_startup ();
 # Generate 'going up' events
 foreach my $server (@Servers) {
 	$server->upEvent ();
-}
-
-# Daemonize and put in background
-if ($Config{'daemon'} == 1) {
-	print_message (\%Config, " [*] Backgrounding Pandora FMS Server process.\n", 1);
-	pandora_daemonize (\%Config);
 }
 
 # Main loop
